--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "style-loader": "1.3.0",
     "terser-webpack-plugin": "4.2.3",
     "ts-pnp": "1.2.0",
+    "typescript": "^4.3.5",
     "url-loader": "4.1.1",
     "web-vitals": "^1.0.1",
     "webpack": "4.44.2",
@@ -94,6 +95,8 @@
     ]
   },
   "devDependencies": {
+    "@types/react": "^17.0.15",
+    "@types/react-router-dom": "^5.1.8",
     "eslint": "^7.20.0",
     "eslint-plugin-react": "^7.22.0"
   },
