--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "jest-circus": "26.6.0",
     "jest-resolve": "26.6.0",
     "jest-watch-typeahead": "0.6.1",
+    "less-loader": "^6.0.0",
     "mini-css-extract-plugin": "0.11.3",
     "optimize-css-assets-webpack-plugin": "5.0.4",
     "pnp-webpack-plugin": "1.6.4",
@@ -98,7 +99,10 @@
     "@types/react": "^17.0.15",
     "@types/react-router-dom": "^5.1.8",
     "eslint": "^7.20.0",
-    "eslint-plugin-react": "^7.22.0"
+    "eslint-plugin-react": "^7.22.0",
+    "less": "^4.1.1",
+    "standard": "^16.0.3",
+    "ts-standard": "^10.0.0"
   },
   "jest": {
     "roots": [
@@ -156,5 +160,8 @@
     "presets": [
       "react-app"
     ]
+  },
+  "ts-standard": {
+    "project": "./tsconfig.json"
   }
 }
