--- a/package.json
+++ b/package.json
@@ -9,8 +9,6 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
-    "@typescript-eslint/eslint-plugin": "^4.5.0",
-    "@typescript-eslint/parser": "^4.5.0",
     "antd": "^4.12.3",
     "babel-eslint": "^10.1.0",
     "babel-jest": "^26.6.0",
@@ -23,7 +21,6 @@
     "css-loader": "4.3.0",
     "dotenv": "8.2.0",
     "dotenv-expand": "5.1.0",
-    "eslint": "^7.11.0",
     "eslint-config-react-app": "^6.0.0",
     "eslint-plugin-flowtype": "^5.2.0",
     "eslint-plugin-import": "^2.22.1",
@@ -64,7 +61,6 @@
     "style-loader": "1.3.0",
     "terser-webpack-plugin": "4.2.3",
     "ts-pnp": "1.2.0",
-    "typescript": "^4.3.5",
     "url-loader": "4.1.1",
     "web-vitals": "^1.0.1",
     "webpack": "4.44.2",
@@ -98,11 +94,15 @@
   "devDependencies": {
     "@types/react": "^17.0.15",
     "@types/react-router-dom": "^5.1.8",
-    "eslint": "^7.20.0",
+    "@typescript-eslint/eslint-plugin": "^4.31.0",
+    "@typescript-eslint/parser": "^4.31.0",
+    "eslint": "^7.32.0",
     "eslint-plugin-react": "^7.22.0",
     "less": "^4.1.1",
+    "prettier": "2.4.0",
     "standard": "^16.0.3",
-    "ts-standard": "^10.0.0"
+    "ts-standard": "^10.0.0",
+    "typescript": "^4.4.3"
   },
   "jest": {
     "roots": [
